--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
 <table border="1" >
 <tr>
-<th colspan= "2"> <h1 style="background-color: orange; color: black; text-align:center;"> Trang Web của Lê Hoàng Quân 12M</h1> </th>
+<th colspan= "2"> <h1 style="background-color: orange; color: black; text-align:center;"> Trang Web của MaiVu</h1> </th>
 </tr>
   <tr ><td><center>Danh Mục</center></td>
 
