--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trang Web Của Tôi</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Chào mừng đến với trang web của tôi!</h1>
+        <p>Xin chào! Tôi là Mai Hoàng Vũ, đây là trang cá nhân của tôi.</p>
+    </header>
 
+    <section>
+        <h2>Giới Thiệu</h2>
+        <p>Tôi thích ngắm thiên nhiên, học tập .</p>
+    </section>
+
+    <section>
+        <h2>Bộ Phim Yêu Thích</h2>
+        <p>Bộ phim tôi yêu thích nhất là <b>Interstellar</b> (Hố Đen Vũ Trụ).</p>
+        <p>Bạn có thể xem thêm về phim này tại: 
+            <a href="https://www.imdb.com/title/tt0816692/" target="_blank">IMDb - Interstellar</a>.
+        </p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Mai Hoàng Vũ. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
