--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Tin học</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+  <div class="header">Test</div>
+  <div class="tngang">
+    <a href="content/gioithieu.html" target="nd">Giới thiệu</a>
+    <a href="content/huongnghiep.html" target="nd">Nhóm nghề</a>
+    <a href="content/thoikhoabieu.html" target="nd">Thời khoá biểu</a>
+    <a href="content/AI.html" target="nd">Ngành khoa học máy tính</a>
+    <a href="content/Bai7-NV1.html" target="nd">Góp ý</a>
+  </div>
+  <div class="noidung">
+    <iframe name="nd" width="100%" height="75%"></iframe>
+  </div>
+</body>
+</html>
