--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
   <div class="header">Test</div>
   <div class="tngang">
-    <a href="content/gioithieu.html" target="nd">Giới thiệu</a>
-    <a href="content/huongnghiep.html" target="nd">Nhóm nghề</a>
-    <a href="content/thoikhoabieu.html" target="nd">Thời khoá biểu</a>
-    <a href="content/AI.html" target="nd">Ngành khoa học máy tính</a>
-    <a href="content/Bai7-NV1.html" target="nd">Góp ý</a>
+    <a href="contents/gioithieu.html" target="nd">Giới thiệu</a>
+    <a href="contents/huongnghiep.html" target="nd">Nhóm nghề</a>
+    <a href="contents/thoikhoabieu.html" target="nd">Thời khoá biểu</a>
+    <a href="contents/Bai7-NV1.html" target="nd">Góp ý</a>
   </div>
   <div class="noidung">
     <iframe name="nd" width="100%" height="75%"></iframe>
