--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="header">Test</div>
   <div class="tngang">
-    <a href="contents/gioithieu.html" target="nd">Giới thiệu</a>
-    <a href="contents/huongnghiep.html" target="nd">Nhóm nghề</a>
+    <a href="gioithieu.html" target="nd">Giới thiệu</a>
+    <a href="contents/HuongNghiep.html" target="nd">Nhóm nghề</a>
     <a href="contents/thoikhoabieu.html" target="nd">Thời khoá biểu</a>
     <a href="contents/Bai7-NV1.html" target="nd">Góp ý</a>
   </div>
