--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header">Vũ 12M</div>
-  <div class="tngang">
+  <div class="menu">
     <a href="gioithieu.html" target="nd">Giới thiệu</a>
     <a href="contents/HuongNghiep.html" target="nd">Nhóm nghề</a>
     <a href="contents/thoikhoabieu.html" target="nd">Thời khoá biểu</a>
