--- a/index.html
+++ b/index.html
@@ -1,22 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tin học</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <style>
+    /* Định dạng tổng thể */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Header */
+    .header {
+      background-color: #007bff;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    /* Menu */
+    .menu {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      background-color: #333;
+      padding: 10px 0;
+    }
+
+    .menu a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 15px;
+      font-size: 16px;
+    }
+
+    .menu a:hover {
+      background-color: #575757;
+    }
+
+    /* Nội dung chính */
+    .noidung {
+      width: 100%;
+      max-width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+
+    .noidung iframe {
+      width: 100%;
+      height: 80vh;
+      border: none;
+    }
+
+    /* Responsive cho màn hình nhỏ */
+    @media (max-width: 600px) {
+      .menu {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .menu a {
+        display: block;
+        width: 100%;
+        text-align: center;
+        padding: 12px 0;
+      }
+    }
+  </style>
 </head>
+
 <body>
   <div class="header">Vũ 12M</div>
+
   <div class="menu">
     <a href="gioithieu.html" target="nd">Giới thiệu</a>
     <a href="contents/HuongNghiep.html" target="nd">Nhóm nghề</a>
     <a href="contents/thoikhoabieu.html" target="nd">Thời khoá biểu</a>
     <a href="contents/Bai7-NV1.html" target="nd">Góp ý</a>
   </div>
+
   <div class="noidung">
-    <iframe name="nd" width="1000%" height="1000%"></iframe>
+    <iframe name="nd"></iframe>
   </div>
 </body>
+
 </html>
