--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     /* Header */
     .header {
-      background-color: #007bff;
+      background-color: #FFCC33;
       color: white;
       text-align: center;
       padding: 15px;
